[project]
name = "axio"
version = "0.1.1"
description = "Minimal, streaming-first, protocol-driven foundation for LLM-powered agents"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = ["pydantic>=2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
    "ruff>=0.9",
    "pytest-cov>=7.1.0",
]
